@@ -1,0 +1,7 @@
+# $Id$
+---
+repositories:
+  - id: central
+    name: Central Maven Repository
+    url: https://repo1.maven.org/maven2
+    layout: default
