@@ -1,5 +1,8 @@
 2021-02-21  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/dependency/Resolver.java:
+	Interim check-in.
+
 	* src/main/java/galyleo/shell/magic/AbstractMagic.java:
 	Initial writing: Provides common PropertyPlaceholderHelper.
 
